Add some ViewModels

--- a/Bank/Bank/MainWindow.xaml
+++ b/Bank/Bank/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bank"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Height="450" Width="800"
+        ResizeMode="NoResize">
     <Grid>
-
+        
     </Grid>
 </Window>
