--- a/Bank/Bank/App.xaml
+++ b/Bank/Bank/App.xaml
@@ -2,8 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Bank"
+             xmlns:vm="clr-namespace:Bank.ViewModels"
+             xmlns:v="clr-namespace:Bank.Views"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        
+        <DataTemplate DataType="{x:Type vm:HomeViewModel}">
+            <v:HomeView/>
+        </DataTemplate>
+        
     </Application.Resources>
 </Application>
