--- a/Bank/Bank/App.xaml
+++ b/Bank/Bank/App.xaml
@@ -8,7 +8,7 @@
     <Application.Resources>
         
         <DataTemplate DataType="{x:Type vm:HomeViewModel}">
-            <v:HomeView/>
+            <v:HomeVIew/>
         </DataTemplate>
         
     </Application.Resources>
